{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 55,
  "lineage": "4952c92d-75b9-1255-94fb-6681f523b8c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:427128480243:internet-gateway/igw-0e29bae85b4eb76f6",
            "id": "igw-0e29bae85b4eb76f6",
            "owner_id": "427128480243",
            "tags": {
              "gateway": "terraform-gateway"
            },
            "vpc_id": "vpc-0a3eb99443341cfe9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-073565d54e3a04145",
            "owner_id": "427128480243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "routetable": "terraform-private-routetable"
            },
            "vpc_id": "vpc-0a3eb99443341cfe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0857732adee6b8d7a",
            "owner_id": "427128480243",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e29bae85b4eb76f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "routTable": "terraform-public-routetable"
            },
            "vpc_id": "vpc-0a3eb99443341cfe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-subnet-route-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0354a719aedc8686e",
            "route_table_id": "rtb-073565d54e3a04145",
            "subnet_id": "subnet-0aa15f5197f55ac41"
          },
          "dependencies": [
            "aws_route_table.terraform-route-table-private",
            "aws_subnet.aws-subnet-private-subnet",
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-subnet-route-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ea076540229f671",
            "route_table_id": "rtb-0857732adee6b8d7a",
            "subnet_id": "subnet-0a6fdb25a67f55504"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-internet-gateway",
            "aws_route_table.terraform-route-table-public",
            "aws_subnet.aws-subnet-public-subnet",
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:427128480243:subnet/subnet-0aa15f5197f55ac41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-0aa15f5197f55ac41",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "427128480243",
            "tags": {
              "subnetType": "terraform-private-subnet"
            },
            "tags_all": {
              "subnetType": "terraform-private-subnet"
            },
            "vpc_id": "vpc-0a3eb99443341cfe9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:427128480243:subnet/subnet-0a6fdb25a67f55504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-0a6fdb25a67f55504",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427128480243",
            "tags": {
              "subnetType": "terraform-public-subnet"
            },
            "tags_all": {
              "subnetType": "terraform-public-subnet"
            },
            "vpc_id": "vpc-0a3eb99443341cfe9"
          },
          "dependencies": [
            "aws_vpc.aws-vpc-terraform-custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc-terraform-custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:427128480243:vpc/vpc-0a3eb99443341cfe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-08e02d4570daf5ba6",
            "default_route_table_id": "rtb-02b24daf7999a21c7",
            "default_security_group_id": "sg-021bbfb9c0766eedd",
            "dhcp_options_id": "dopt-23bc2748",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a3eb99443341cfe9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02b24daf7999a21c7",
            "owner_id": "427128480243",
            "tags": {
              "vpcType": "custom-vpc-terraform"
            },
            "tags_all": {
              "vpcType": "custom-vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}